--- a/react-client/package.json
+++ b/react-client/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "react": "^15.3.2",
+    "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0"
