--- a/react-client/package.json
+++ b/react-client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-polyfill": "^6.13.0",
     "react-scripts": "0.4.3"
   },
   "dependencies": {
