--- a/react-client/package.json
+++ b/react-client/package.json
@@ -7,6 +7,7 @@
     "react-scripts": "0.4.3"
   },
   "dependencies": {
+    "google-maps-react": "^1.0.18",
     "immutable": "^3.8.1",
     "react": "^15.3.2",
     "react-addons-pure-render-mixin": "^15.3.2",
